// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dependabot default 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: projen
"
`;

exports[`dependabot github-actions should include github actions 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: projen
  - package-ecosystem: github-actions
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: projen
"
`;

exports[`dependabot ignoring ignore with a single version 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: testlib
        versions:
          - \\">10.x\\"
      - dependency-name: projen
"
`;

exports[`dependabot ignoring ignore with ignoreProjen set to false 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
"
`;

exports[`dependabot ignoring ignore with multiple versions 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: testlib
        versions:
          - 10.x
          - 20.x
      - dependency-name: projen
"
`;

exports[`dependabot ignoring ignore with no version 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: testlib
      - dependency-name: projen
"
`;

exports[`dependabot ignoring ignores projen by default 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: projen
"
`;

exports[`dependabot private registries 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

version: 2
registries:
  npm-registry-npm-pkg-github-com:
    type: npm-registry
    url: https://npm.pkg.github.com
    token: \${{ secrets.TOKEN }}
    replaces-base: true
    username: test
    password: \${{ secrets.TOKEN }}
    key: abc123
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: projen
    registries:
      - npm-registry-npm-pkg-github-com
"
`;
